crates/au-cli/tests/it/snapshots/it__scenarios__inline-value.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 18,
                        "line_col": {
                          "end": {
                            "col": 19,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/inline-value/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "inline-value"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "inline-value"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/inline-value/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 180,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 9
                },
                "start": {
                  "col": 1,
                  "line": 8
                }
              },
              "start": 142
            },
            "text": "A decision with an inline rationale"
          },
          {
            "content": "rationale",
            "kind": "inline_code",
            "span": {
              "end": 192,
              "line_col": {
                "end": {
                  "col": 12,
                  "line": 10
                },
                "start": {
                  "col": 1,
                  "line": 10
                }
              },
              "start": 181
            }
          },
          {
            "content": "type:",
            "kind": "inline_code",
            "span": {
              "end": 298,
              "line_col": {
                "end": {
                  "col": 118,
                  "line": 10
                },
                "start": {
                  "col": 111,
                  "line": 10
                }
              },
              "start": 291
            }
          }
        ],
        "claim": [
          "decision-with-rationale"
        ],
        "closure": [
          "decision-with-rationale"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "rationale",
            "origins": [
              {
                "name": "decision-with-rationale",
                "origin_path": "<root>/scenarios/inline-value/type/decision-with-rationale.type.yaml",
                "required": true,
                "shape": "rationale"
              }
            ],
            "required": true,
            "shape": "rationale"
          },
          {
            "divergent": false,
            "field": "summary",
            "origins": [
              {
                "name": "decision-with-rationale",
                "origin_path": "<root>/scenarios/inline-value/type/decision-with-rationale.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 137,
                        "line_col": {
                          "end": {
                            "col": 1,
                            "line": 6
                          },
                          "start": {
                            "col": 3,
                            "line": 5
                          }
                        },
                        "start": 76
                      },
                      "file": "<root>/scenarios/inline-value/sqlite-decision.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "fields": [
                        {
                          "field": "description",
                          "values": [
                            {
                              "kind": "scalar",
                              "value": "Performance gains and operational simplicity."
                            }
                          ]
                        }
                      ],
                      "kind": "inline_record"
                    }
                  }
                ],
                "value": {
                  "fields": [
                    {
                      "field": "description",
                      "values": [
                        {
                          "kind": "scalar",
                          "value": "Performance gains and operational simplicity."
                        }
                      ]
                    }
                  ],
                  "kind": "inline_record"
                }
              }
            ],
            "field": "rationale"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 62,
                        "line_col": {
                          "end": {
                            "col": 29,
                            "line": 3
                          },
                          "start": {
                            "col": 10,
                            "line": 3
                          }
                        },
                        "start": 43
                      },
                      "file": "<root>/scenarios/inline-value/sqlite-decision.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Migrate to SQLite"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Migrate to SQLite"
                }
              }
            ],
            "field": "summary"
          }
        ],
        "file": "<root>/scenarios/inline-value/sqlite-decision.md",
        "section_presence": null
      }
    ]
  }
}
